# webshell-analyzer

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
webshell_analyzer/Sampel pengujian/: large_php.py  result.json  save_output.json  save_output2.json
webshell_analyzer/Sampel pengujian/new_sample/Webshell/: IndoSec-sHell.php  alfa2024.php  bheh_php_shell.php  csa.php  eBy.php  f1.php  jquery.php
webshell_analyzer/Sampel pengujian/sampel1/: output_detect.json  save_output2.json
webshell_analyzer/Sampel pengujian/sampel_scan/: result.json
webshell_analyzer/Sampel pengujian/sampel_scan/PHP/: 4RC.php
webshell_analyzer/Sampel pengujian/sampel_scan/all/: heads_Tails.txt
webshell_analyzer/Sampel pengujian/sampel_scan/non_PHP/: RfModel.ipynb  hasil_validasi.txt  simple_calculator.py
webshell_analyzer/cli/: cli.py
webshell_analyzer/extractor/: extractor.py
webshell_analyzer/extractor/ast_extraction/src/: NodeVisitor.php  astBuilder.php  (+2 more)
webshell_analyzer/extractor/lexical_extraction/: lexicalExtractor.py
webshell_analyzer/extractor/statistical_extraction/: statisticalExtractor.py
webshell_analyzer/model/: features_selected.json  model_loader.py  rf_webshell_model.joblib
webshell_analyzer/modules/: detector.py  scanner.py
webshell_detector.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
webshell_detector/cli/: cli.py
webshell_detector/extractor/Lexical/: lexical.py
webshell_detector/extractor/Statistical/: statistical.php  statistical.py
webshell_detector/model/: features_selected.pkl
webshell_detector/modules/: detector.py  scanner.py
